--- a/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite/appsettings.Development.json
@@ -1,8 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "tableName": "log_events",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
+  },
+  "AllowedHosts": "*"
 }
