jwt token ve aut controller eklendi

--- a/MyBlogSite/appsettings.json
+++ b/MyBlogSite/appsettings.json
@@ -1,2 +1,7 @@
 {
+    "AppSettings": {
+        "ValidAudience": "AudienceInformation",
+        "ValidIssuer": "IssuerInformation",
+        "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+    }
 }
