launch settings json edit

--- a/MyBlogSite/Properties/launchSettings.json
+++ b/MyBlogSite/Properties/launchSettings.json
@@ -19,7 +19,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "BASE_URL": "http://localhost",
         "SQL_CONNECTION":"Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
-        "PORT": "7071",
+        "PORT": "7071"
       }
     },
     "Staging": {
@@ -31,7 +31,7 @@
         "ASPNETCORE_ENVIRONMENT": "Staging",
         "BASE_URL": "http://localhost",
         "SQL_CONNECTION":"Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
-        "PORT": "8081",
+        "PORT": "8081"
       }
     },
     "Production": {
@@ -43,7 +43,7 @@
         "ASPNETCORE_ENVIRONMENT": "Production",
         "BASE_URL": "http://localhost",
         "SQL_CONNECTION":"Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
-        "PORT": "9091",
+        "PORT": "9091"
       }
     },
     "http": {
@@ -76,6 +76,6 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "SQL_CONNECTION":"Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
       }
-    },
+    }
   }
 }
