--- a/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite/appsettings.Development.json
@@ -1,23 +1,5 @@
 {
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "MSSqlServer",
-        "Args": {
-          "tableName": "log_events",
-          "autoCreateSqlTable": true
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
-  },
-  "AllowedHosts": "*"
+  "SQL_CONNECTION":"Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
+  "BASE_URL": "http://localhost",
+  "PORT": "7071"
 }
