--- a/MyBlogSite/appsettings.json
+++ b/MyBlogSite/appsettings.json
@@ -3,5 +3,26 @@
         "ValidAudience": "AudienceInformation",
         "ValidIssuer": "IssuerInformation",
         "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
-    }
+    },
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+        "MinimumLevel": "Information",
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "MSSqlServer",
+                "Args": {
+                    "tableName": "log_events",
+                    "autoCreateSqlTable": true
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
+    },
+    "AllowedHosts": "*"
 }
