Mail consumer and mail producer added

--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
@@ -3,7 +3,8 @@
   "BASE_URL": "http://localhost",
   "PORT": "9091",
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa"
+    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "MailQueueKey": "MailQueue"
   }
 }
   
