--- a/MyBlogSite.Consumers/MailConsumer/MailConsumer.csproj
+++ b/MyBlogSite.Consumers/MailConsumer/MailConsumer.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\MyBlogSite.APIs\Base\Base.csproj" />
       <ProjectReference Include="..\..\MyBlogSite.Business\MyBlogSite.Business.csproj" />
     </ItemGroup>
 
