--- a/MyBlogSite.APIs/Base/appsettings.Development.json
+++ b/MyBlogSite.APIs/Base/appsettings.Development.json
@@ -3,6 +3,7 @@
   "BASE_URL": "http://localhost",
   "PORT": "5288",
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa"
+    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "MailQueueKey": "MailQueue"
   }
 }
