--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "RabbitMQ": {
-    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa"
+    "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
+    "MailQueueKey": "MailQueue"
   }
 }
