--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
@@ -5,6 +5,13 @@
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
     "MailQueueKey": "MailQueue"
+  },
+  "MAIL_CONNECTION": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "IsSsl": true,
+    "Mail": "osmanpvos@gmail.com",
+    "AppPass": "nqitzkeqqugemwsb"
   }
 }
   
