--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
@@ -12,6 +12,15 @@
     "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
     "AppPass": "nqitzkeqqugemwsb"
+  },
+  "FILE_STORAGE": {
+    "Type": "MinIO",
+    "MinioSettings": {
+      "Endpoint": "your-minio-endpoint",
+      "AccessKey": "your-access-key",
+      "SecretKey": "your-secret-key",
+      "BucketName": "your-bucket-name"
+    }
   }
 }
   
