--- a/MyBlogSite.Business/MyBlogSite.Business.csproj
+++ b/MyBlogSite.Business/MyBlogSite.Business.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.1" />
+      <PackageReference Include="Minio" Version="6.0.4" />
       <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     </ItemGroup>
 
