--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
@@ -1,7 +1,5 @@
 {
   "SQL_CONNECTION": "Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
-  "BASE_URL": "http://localhost",
-  "PORT": "9091",
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
     "MailQueueKey": "MailQueue"
@@ -11,7 +9,7 @@
     "Port": "587",
     "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
-    "AppPass": "nqitzkeqqugemwsb"
+    "AppPass": "APP_PASS"
   },
   "FILE_STORAGE": {
     "Type": "MinIO",
