--- a/MyBlogSite.APIs/Base/Base.csproj
+++ b/MyBlogSite.APIs/Base/Base.csproj
@@ -10,7 +10,6 @@
         <PackageReference Include="Autofac" Version="8.0.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
-        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.ApiExplorer" Version="2.2.0" />
@@ -23,6 +22,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\MyBlogSite.Business\MyBlogSite.Business.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+        <DependentUpon>Dockerfile</DependentUpon>
+      </Content>
     </ItemGroup>
 
 </Project>
