--- a/MyBlogSite.Consumers/MailConsumer/MailConsumer.csproj
+++ b/MyBlogSite.Consumers/MailConsumer/MailConsumer.csproj
@@ -8,11 +8,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0"/>
-        <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Update="appsettings.Development.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Test.json">
         <DependentUpon>appsettings.json</DependentUpon>
       </Content>
     </ItemGroup>
