--- a/MyBlogSite.Dal/MyBlogSite.Dal.csproj
+++ b/MyBlogSite.Dal/MyBlogSite.Dal.csproj
@@ -13,4 +13,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4"/>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\MyBlogSite.Core\MyBlogSite.Core.csproj" />
+    </ItemGroup>
 </Project>
