user şifre sıfırlaması için gerekli methodlar eklendi.

--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
@@ -19,6 +19,9 @@
       "SecretKey": "your-secret-key",
       "BucketName": "your-bucket-name"
     }
+  },
+  "URLS": {
+    "ResetPasswordUrl": "deneme?token="
   }
 }
   
