--- a/MyBlogSite.APIs/MyBlogSite/appsettings.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.json
@@ -2,7 +2,7 @@
     "AppSettings": {
         "ValidAudience": "AudienceInformation",
         "ValidIssuer": "IssuerInformation",
-        "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+        "Secret": "skD7*V$e1A3&oLqF@ZP!x9#rTp2%Bm8UjK$WXY^H@zEtRvGhNc9J+Lm6q!F%Y#s\n"
     },
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
@@ -24,5 +24,9 @@
         ],
         "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "AES_CONFIG": {
+        "Key" : "1234567890123456",
+        "Iv": "1234567890123456"
+    }
 }
