--- a/MyBlogSite.Business/MyBlogSite.Business.csproj
+++ b/MyBlogSite.Business/MyBlogSite.Business.csproj
@@ -15,7 +15,9 @@
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.1" />
       <PackageReference Include="Minio" Version="6.0.4" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
+      <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
     </ItemGroup>
 
     <ItemGroup>
