--- a/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
+++ b/MyBlogSite.Consumers/MailConsumer/appsettings.Development.json
@@ -14,6 +14,6 @@
     "Port": "587",
     "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
-    "AppPass": "APP_PASS"
+    "AppPass": "nqitzkeqqugemwsb"
   }
 }
