--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
@@ -9,15 +9,15 @@
     "Port": "587",
     "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
-    "AppPass": "APP_PASS"
+    "AppPass": "nqitzkeqqugemwsb"
   },
   "FILE_STORAGE": {
-    "Type": "MinIO",
-    "MinioSettings": {
-      "Endpoint": "your-minio-endpoint",
-      "AccessKey": "your-access-key",
-      "SecretKey": "your-secret-key",
-      "BucketName": "your-bucket-name"
+    "Type": "Wasabi",
+    "WasabiSettings": {
+      "Endpoint": "http://s3.eu-central-1.wasabisys.com",
+      "AccessKey": "LFY9H6JAFLEA0K90IZAZ",
+      "SecretKey": "8OOG44ap3zSVWP41O3MnJAfv8Z4TWfttJjrK6LMA",
+      "BucketName": "blog-site-dev"
     }
   },
   "URLS": {
