--- a/MyBlogSite.Business/MyBlogSite.Business.csproj
+++ b/MyBlogSite.Business/MyBlogSite.Business.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="AWSSDK.S3" Version="3.3.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.1" />
       <PackageReference Include="Minio" Version="6.0.4" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
