--- a/MyBlogSite.Core/MyBlogSite.Core.csproj
+++ b/MyBlogSite.Core/MyBlogSite.Core.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MassTransit.Abstractions" Version="8.3.5-develop.2174" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.5-develop.2174" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     </ItemGroup>
