signalr hataları düzeltildi.

--- a/MyBlogSite.Consumers/NotificationConsumer/appsettings.json
+++ b/MyBlogSite.Consumers/NotificationConsumer/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "ValidAudience": "AudienceInformation",
+    "ValidIssuer": "IssuerInformation",
+    "Secret": "skD7*V$e1A3&oLqF@ZP!x9#rTp2%Bm8UjK$WXY^H@zEtRvGhNc9J+Lm6q!F%Y#s\n"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
