--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Development.json
@@ -2,7 +2,8 @@
   "SQL_CONNECTION": "Server=DESKTOP-DMADJIQ;Database=myblogsite;Integrated Security = true; TrustServerCertificate=True;",
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
-    "MailQueueKey": "MailQueue"
+    "MailQueueKey": "MailQueue",
+    "SignalrQueueKey": "SignalrQueue"
   },
   "MAIL_CONNECTION": {
     "Host": "smtp.gmail.com",
