--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
@@ -2,7 +2,8 @@
   "SQL_CONNECTION": "Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
-    "MailQueueKey": "MailQueue"
+    "MailQueueKey": "MailQueue",
+    "SignalrQueueKey": "SignalrQueue"
   },
   "MAIL_CONNECTION": {
     "Host": "smtp.gmail.com",
