--- a/MyBlogSite.Consumers/NotificationConsumer/appsettings.Development.json
+++ b/MyBlogSite.Consumers/NotificationConsumer/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
-    "MailQueueKey": "MailQueue"
+    "MailQueueKey": "MailQueue",
+    "SignalrQueueKey": "SignalrQueue"
   }
 }
