admin user kontrolleri user silme user'ın blog bağlantısını kaldırma user güncelleme user banlama user get all get user

--- a/MyBlogSite.APIs/Admin/Admin.csproj
+++ b/MyBlogSite.APIs/Admin/Admin.csproj
@@ -17,4 +17,20 @@
       <ProjectReference Include="..\Base\Base.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.Development.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Production.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+      <Content Update="appsettings.Test.json">
+        <DependentUpon>appsettings.json</DependentUpon>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\v1\" />
+    </ItemGroup>
+
 </Project>
