--- a/MyBlogSite.APIs/Admin/appsettings.json
+++ b/MyBlogSite.APIs/Admin/appsettings.json
@@ -1,9 +1,32 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AppSettings": {
+    "ValidAudience": "AudienceInformation",
+    "ValidIssuer": "IssuerInformation",
+    "Secret": "skD7*V$e1A3&oLqF@ZP!x9#rTp2%Bm8UjK$WXY^H@zEtRvGhNc9J+Lm6q!F%Y#s\n"
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "tableName": "log_events",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
+  },
+  "AllowedHosts": "*",
+  "AES_CONFIG": {
+    "Key" : "1234567890123456",
+    "Iv": "1234567890123456"
+  }
 }
