--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./MyBlogSite.APIs/MyBlogSite  # Buraya hangi proje dizini
+          local-dir: ./MyBlogSite.APIs/MyBlogSite/  # Buraya hangi proje dizini
           server-dir: /httpdocs/   # FTP sunucusundaki hedef klasör
