--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,35 @@
-name: FTP Deploy
+name: FTP Deploy (Published Code)
 
 on:
   push:
     branches:
-      - master  # Sadece main branch'e push yapıldığında çalışır
+      - master  # Sadece master branch'e push yapıldığında çalışır
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    #Bu adım, GitHub repository’ndeki kodları Actions sanal makinesine indirir.
-    #Bunun sayesinde GitHub Actions içinden dosyalara erişebiliriz.
     steps:
+      # Kodu GitHub'dan Çek
       - name: Kodu GitHub'dan Çek
         uses: actions/checkout@v2
 
-      - name: FTP ile Sunucuya Yükle
+      # .NET SDK Kurulumu
+      - name: .NET SDK Kurulumu
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'  # Kullanılan .NET sürümüne göre değiştirebilirsin
+
+      # Projeyi Build ve Publish Et
+      - name: Projeyi Build ve Publish Et
+        run: dotnet publish ./MyBlogSite.APIs/MyBlogSite/MyBlogSite.csproj -c Release -o ./publish
+
+      # Publish Edilen Kodları FTP'ye Yükle
+      - name: FTP ile Publish Edilen Kodları Yükle
         uses: SamKirkland/FTP-Deploy-Action@4.3.1
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./MyBlogSite.APIs/MyBlogSite/  # Buraya hangi proje dizini
-          server-dir: /httpdocs/   # FTP sunucusundaki hedef klasör
+          local-dir: ./publish/  # Sadece publish edilen kodları yükle
+          server-dir: /httpdocs/  # FTP sunucusundaki hedef klasör
