--- a/MyBlogSite.APIs/Admin/appsettings.Development.json
+++ b/MyBlogSite.APIs/Admin/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "SQL_CONNECTION": "Server=DESKTOP-DMADJIQ;Database=myblogsite;Integrated Security = true; TrustServerCertificate=True;",
+  "SQL_CONNECTION": "Server=104.247.161.58\\MSSQLSERVER2022;Database=anal2350_BlogSite;User Id=anal2350_admin;Password=KyVCxz5bv7ud&7q#;TrustServerCertificate=True;",
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
     "MailQueueKey": "MailQueue",
