--- a/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
+++ b/MyBlogSite.APIs/MyBlogSite/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "SQL_CONNECTION": "Server=analizgaraj.com\\MSSQLSERVER2019;Database=analizga_blog;User Id=analizga_pollify;Password=tq0m5E7~1;TrustServerCertificate=True;",
+  "SQL_CONNECTION": "Server=104.247.161.58\\MSSQLSERVER2022;Database=anal2350_BlogSite;User Id=anal2350_admin;Password=KyVCxz5bv7ud&7q#;TrustServerCertificate=True;",
   "RabbitMQ": {
     "Url": "amqps://pwrvwzoa:Jl5BBuwM0Wbm65DYNJwgH5At7OwMXEFw@rat.rmq2.cloudamqp.com/pwrvwzoa",
     "MailQueueKey": "MailQueue",
@@ -10,16 +10,19 @@
     "Port": "587",
     "IsSsl": true,
     "Mail": "osmanpvos@gmail.com",
-    "AppPass": "APP_PASS"
+    "AppPass": "nqitzkeqqugemwsb"
   },
   "FILE_STORAGE": {
-    "Type": "MinIO",
-    "MinioSettings": {
-      "Endpoint": "your-minio-endpoint",
-      "AccessKey": "your-access-key",
-      "SecretKey": "your-secret-key",
-      "BucketName": "your-bucket-name"
+    "Type": "Wasabi",
+    "WasabiSettings": {
+      "Endpoint": "http://s3.eu-central-1.wasabisys.com",
+      "AccessKey": "LFY9H6JAFLEA0K90IZAZ",
+      "SecretKey": "8OOG44ap3zSVWP41O3MnJAfv8Z4TWfttJjrK6LMA",
+      "BucketName": "blog-site-dev"
     }
+  },
+  "URLS": {
+    "ResetPasswordUrl": "deneme?token="
   }
 }
   
