--- a/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
+++ b/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5005",
+      "applicationUrl": "http://*:5005",
       "sslPort": 44305
     }
   },
@@ -20,7 +20,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5005", 
+      "applicationUrl": "http://*:5005", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -29,7 +29,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:6005;http://localhost:7005", 
+      "applicationUrl": "https://*:6005;http://*:7005", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
