--- a/MyBlogSite.APIs/MyBlogSite/Properties/launchSettings.json
+++ b/MyBlogSite.APIs/MyBlogSite/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37375",
+      "applicationUrl": "http://*:37375",
       "sslPort": 44341
     }
   },
