--- a/MyBlogSite.APIs/MyBlogSite/Properties/launchSettings.json
+++ b/MyBlogSite.APIs/MyBlogSite/Properties/launchSettings.json
@@ -4,8 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://*:37375",
-      "sslPort": 44341
+      "applicationUrl": "http://*:37375"
     }
   },
   "profiles": {
