--- a/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
+++ b/MyBlogSite.Consumers/MailConsumer/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://*:5005"
+      "applicationUrl": "http://127.0.0.1:5005"
     }
   },
   "profiles": {
@@ -19,7 +19,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://*:5005", 
+      "applicationUrl": "http://127.0.0.1:5005", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -28,7 +28,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://*:6005;http://*:7005", 
+      "applicationUrl": "https://127.0.0.1:6005;http://127.0.0.1:7005", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
